--- a/JSP_01/.project
+++ b/JSP_01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Servlet_03</name>
+	<name>JSP_01</name>
 	<comment></comment>
 	<projects>
 	</projects>
